@@ -3,7 +3,7 @@ account.email = "awemud@localhost"
 account.passphrase = "$1$tNUNjzkD$F.tONxYNdR8hpYwuekqr7/"
 account.character = "Admin"
 account.created = "2000-01-01 00:00:00"
-account.lastlogin = "2007-02-08 04:07:30"
+account.lastlogin = "2007-02-11 03:00:21"
 account.access = "gm"
 account.access = "admin"
 account.access = "builder"
